@@ -1,7 +1,7 @@
 
 module Rufus
 module Jig
-  VERSION = '0.1.19'
+  VERSION = '0.1.20'
 end
 end
 
